<resources>
    <string name="app_name">Yemen Universities</string>
    <string name="Government">Government Universities</string>
    <string name="Private">Private Universities</string>
    <string name="about_Univer">about university</string>
    <string name="republic_Yemen">Republic of Yemen</string>
    <string name="Ministry_of_Higher_Education">Ministry of Higher Education</string>
    <string name="application">application of </string>
    <string name="University_Student_Guide">University Student Guide</string>

   <!-- &lt;!&ndash;Testing&ndash;&gt;

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>

-->
    <!--Real-->

    <string name="banner_ad_unit_id">ca-app-pub-4754692842325949/1493728733</string>
    <string name="app_ad_unit_id">ca-app-pub-4754692842325949~1507430356</string>

</resources>
