<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/republic_Yemen"
            android:textColor="@color/txtcolor"
            android:textSize="15pt" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Ministry_of_Higher_Education"
            android:textColor="@color/txtcolor"
            android:textSize="15pt" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/application"
            android:textColor="@color/txtcolor"
            android:textSize="10pt" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/University_Student_Guide"
            android:textColor="@color/txtcolor"
            android:textSize="40sp"
            android:textStyle="bold" />






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/Government"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
              android:background="@drawable/loginbutton"
            android:onClick="universities"
            android:padding="5dp"
            android:text="@string/Government"
            android:textColor="@color/txtcolor"
            android:textSize="10pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Private"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton"
            android:onClick="universities"
            android:padding="10dp"
            android:text="@string/Private"
            android:textColor="@color/txtcolor"
            android:textSize="10pt"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />


    </LinearLayout>

</LinearLayout>